# nextcloud-bot

./: .coverage  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.py  compose.prod.yml  compose.yml  config.example.yml  docker-compose.yml  messages.pot  mypy.ini  pyproject.toml  run_tests.sh  runner.py
.github/workflows/: cleanup-images.yml  docker-build.yml
app/: config.py  nc_users.py
lib/: calendar_notifier.py  chromadb.py  collectives_loader.py  common.py  couchdb.py  deck_reminder.py  logbook_xlsx_import.py  menu.py  settings.py  streamlit_oauth.py
lib/mail/: fetcher.py  sender.py
lib/nextcloud/: avatar_fetcher.py  calendar_notifier.py  collectives_loader.py  collectives_parser.py  config.py  deck_reminder.py  models.py  nc_users.py  protocol.py
lib/nextcloud/models/: base.py  collective_page.py  decision.py  group.py  protocol.py  user.py
lib/outbound/: rocketchat.py
locales/: messages.pot
locales/de/LC_MESSAGES/: messages.mo  messages.po
pages/: Money_Analytics.py  Money_Form.py  collective_pages.py  groups.py  logbook.py  mentions.py  protocols.py  timeline.py  users.py
tests/: README.md  __init__.py  conftest.py  test_calendar_notifier.py  test_group_parsing.py  test_protocol_decision_parsing.py
