[project]
name = "nextcloud-bot"
version = "0.1.0"
description = "All kind of analytics for nextcloud"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.3.2",
    "emoji-generator>=0.7",
    "httpx-oauth>=0.15.1",
    "pandas>=2.2.2",
    "plotly>=5.24.1",
    "pydantic-settings>=2.5.2",
    "requests>=2.32.3",
    "sentry-sdk>=2.14.0",
    "streamlit-cookies-controller>=0.0.4",
    "streamlit-js-eval>=0.1.7",
    "streamlit>=1.38.0",
    "caldav>=1.4.0",
    "pytz>=2024.2",
    "pyyaml>=6.0.2",
    "tzlocal>=5.3.1",
    "pycouchdb>=1.16.0",
    "google-genai>=1.46.0",
    "chromadb>=1.3.0",
    "openpyxl>=3.1.5",
    "click>=8.3.0",
    "google-generativeai>=0.8.5",
    "streamlit-agraph>=0.0.45",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "types-authlib>=1.6.5.20251005",
    "types-pytz>=2025.2.0.20250809",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
    "pandas-stubs>=2.3.2.250926",
]
