[project]
name = "nextcloud-bot"
version = "0.1.0"
description = "All kind of analytics for nextcloud"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.3.2",
    "emoji-generator>=0.7",
    "httpx-oauth>=0.15.1",
    "pandas>=2.2.2",
    "plotly>=5.24.1",
    "pydantic-settings>=2.5.2",
    "requests>=2.32.3",
    "sentry-sdk>=2.14.0",
    "streamlit-cookies-controller>=0.0.4",
    "streamlit-js-eval>=0.1.7",
    "streamlit>=1.38.0",
    "caldav>=1.4.0",
    "pytz>=2024.2",
    "pyyaml>=6.0.2",
    "tzlocal>=5.3.1",
    "pycouchdb>=1.16.0",
    "google-genai>=1.46.0",
    "chromadb>=1.3.0",
    "openpyxl>=3.1.5",
    "click>=8.3.0",
    "google-generativeai>=0.8.5",
    "streamlit-agraph>=0.0.45",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-huggingface>=0.1.0",
    "langchain-chroma>=0.1.0",
    "langchain-community>=0.3.0",
    "rank-bm25>=0.2.2",
    "plotly-express>=0.4.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "types-authlib>=1.6.5.20251005",
    "types-pytz>=2025.2.0.20250809",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
    "pandas-stubs>=2.3.2.250926",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["lib"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
